tests/error/wrong_return_type.magi
// TEST: Wrong return type should error

foo :: () -> i32 {
    return "hello"
}

main :: () -> i32 {
    return 0
}
